CSS and content fixes to enable "to" to be displayed on mobile devices and read on desktop by screen readers.

--- a/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_jobprofile.scss
+++ b/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/includes/_jobprofile.scss
@@ -280,13 +280,16 @@
                     float: left;
                 }
 
-                .job-profile-salary-to {
+                i {
                     display: inline !important;
-                    margin: 0;
+                    font-style: normal;
+                    margin: 0 5px !important;
+                    float: none !important;
                 }
 
                 span {
                     margin-top: 0;
+                    display: none;
 
                     &:after, &:before {
                         display: none;
