--- a/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/main.scss
+++ b/DFC.Digital/DFC.Digital.Web.Sitefinity/ResourcePackages/gds_toolkit/assets/src/frontend/sass/main.scss
@@ -132,6 +132,11 @@ main {
     }
 }
 
+.sr-hidden {
+    float: left;
+    margin-left: -10000px;
+}
+
 .js-enabled {
 
     .js-hidden {
